# my-axum-app

./: .dockerignore  .env  .env.development  .env.example  .env.production  .env.staging  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCKER_README.md  Dockerfile  ENV_CONFIG_GUIDE.md  FINAL_TEST_RESULTS.md  FOTO_FEATURE_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  KANTOR_REQUIRED_SUMMARY.md  KANTOR_VALIDATION_SUMMARY.md  QUICK_START_CORS.md  README.md  README_NEW.md  SCHEMATHESIS_GUIDE.md  TESTING_GUIDE.md  TEST_ORGANIZATION_SUMMARY.md  apache-vhost.conf  api_schema.json  axum-api.service  comprehensive_api_test.py  comprehensive_photo_tests.py  config.yaml  debug_photo_upload.py  deploy.sh  docker-compose.env.yml  docker-compose.yml  docker_with_schemathesis.ps1  init.sql  libkaryawan.rlib  nginx.conf  performance_photo_tests.py  requirements-schemathesis.txt  run_tests.py  (+20 more)
.github/workflows/: rust.yml
docs/: 20251029_ORGANIZATION_COMPLETION.md  APACHE_CONFIGURATION.md  API_DOCUMENTATION_GUIDE.md  AUTO_CREATE_USER_FEATURE.md  AUTO_CREATE_USER_TESTING.md  CORS_CONFIGURATION_GUIDE.md  CORS_IMPLEMENTATION_SUMMARY.md  CORS_QUICK_REFERENCE.md  DATABASE_SETUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  PROJECT_ORGANIZATION.md  README.md  REQUEST_LOGGING_GUIDE.md  SECURITY_IMPLEMENTATION.md  SECURITY_STATUS_REPORT.md  TESTING_GUIDE.md  openapi.yaml  postman_collection.json  postman_environment.json
docs/summaries/: 20251029_FOTO_FEATURE_DOCUMENTATION.md  20251029_IMPLEMENTATION_SUMMARY.md  20251029_KANTOR_REQUIRED_SUMMARY.md  20251029_KANTOR_VALIDATION_SUMMARY.md  20251029_TEST_ORGANIZATION_SUMMARY.md  20251031_AUTO_CREATE_USER_NO_INPUT.md  20251031_KANTOR_USER_TRACKING_IMPLEMENTATION.md  20251031_USER_TRACKING_IMPLEMENTATION.md  20251101_REMOVE_POSISI_FIELD.md  (+3 more)
migration/: Cargo.toml
scripts/: analyze_logs.ps1  check_env.ps1  debug_route.ps1  docker_with_schemathesis.sh  monitor_logs.ps1  run_schemathesis_tests.ps1  test_cors_config.ps1  test_production_cors.ps1  view_logs.ps1
src/: database.rs  main.rs
tests/: README.md  auth_tests.py  master_test_runner.py  quick_validation.py  security_tests.py
(+67 files in other folders)
