[package]
name = "my-axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
rust_decimal = "1.32"
