[package]
name = "my-axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full", "fs"] }
sea-orm = { version = "1.0", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
rust_decimal = "1.32"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
# JWT Authentication dependencies (Simple implementation)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.15"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
